--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
     "react-scripts": "0.8.4"
   },
   "dependencies": {
-    "jquery": "^3.1.1",
+    "axios": "^0.15.3",
     "lodash": "^4.17.4",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-fetch": "0.0.9"
+    "react-dom": "^15.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
